...
    @Composable
    override fun Content() {
        var zoneNameSearched = ""
        var active by remember { mutableStateOf(false) }
        val parkingZoneNames =
            listOf(
                "nám. T.G.M. [PB1]",
                "Osvobození [PB2]",
                "nám. 17. listopadu [PB3]",
                "Václavské náměstí [PB4]",
                "Zahradnická [PB5]",
                "Generála Tesaříka [PB6]",
                "Jiráskovy sady [PB7]",
...
                    },
                    active = active,
                    onActiveChange = {
                        active = it
                    },
                    placeholder = {
                        Text(text = "Zadejte název nebo číslo zóny")
                    },
                    leadingIcon = { Icon(Icons.Filled.Search, "Search Icon") },
                    trailingIcon = {
                        if (active) {
                            Icon(
                                modifier = Modifier.clickable {
...
